--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -64,6 +64,7 @@ HEADERS = $(wildcard *.h)
 OBJS= \
     obj/version.o \
     obj/checkpoints.o \
+    obj/checkpointsync.o \
     obj/netbase.o \
     obj/addrman.o \
     obj/crypter.o \
