--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -58,6 +58,7 @@ HEADERS = $(wildcard *.h)
 OBJS= \
     obj/version.o \
     obj/checkpoints.o \
+    obj/checkpointsync.o \
     obj/netbase.o \
     obj/addrman.o \
     obj/crypter.o \
