--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -116,6 +116,7 @@ xLDFLAGS=$(LDHARDENING) $(LDFLAGS)
 OBJS= \
     obj/version.o \
     obj/checkpoints.o \
+    obj/checkpointsync.o \
     obj/netbase.o \
     obj/addrman.o \
     obj/crypter.o \
