--- a/share/qt/Info.plist
+++ b/share/qt/Info.plist
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist SYSTEM "file://localhost/System/Library/DTDs/PropertyList.dtd">
-<plist version="0.9">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
 <dict>
-	<key>CFBundleIconFile</key>
-	<string>infinitecoin.icns</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
+	<key>CFBundleExecutable</key>
+	<string>Infinitecoin-Qt</string>
 	<key>CFBundleGetInfoString</key>
 	<string>$VERSION, Copyright © 2009-$YEAR The Infinitecoin developers</string>
+	<key>CFBundleIconFile</key>
+	<string>infinitecoin.icns</string>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$VERSION</string>
-	<key>CFBundleVersion</key>
 	<string>$VERSION</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleExecutable</key>
-	<string>Infinitecoin-Qt</string>
-	<key>CFBundleIdentifier</key>
-	<string>org.infinitecoin.Infinitecoin-Qt</string>
-        <key>CFBundleURLTypes</key>
-        <array>
-          <dict>
-            <key>CFBundleTypeRole</key>
-            <string>Editor</string>
-            <key>CFBundleURLName</key>
-            <string>org.infinitecoin.InfinitecoinPayment</string>
-            <key>CFBundleURLSchemes</key>
-            <array>
-              <string>infinitecoin</string>
-            </array>
-          </dict>
-        </array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>org.infinitecoin.InfinitecoinPayment</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>infinitecoin</string>
+			</array>
+		</dict>
+	</array>
+	<key>CFBundleVersion</key>
+	<string>$VERSION</string>
 	<key>NSHighResolutionCapable</key>
 	<true/>
 </dict>
