--- a/share/qt/Info.plist
+++ b/share/qt/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>infinitecoin.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>in.inifinitecoin.fastpay</string>
+	<string>in.infinitecoin.fastpay</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
